[project]
name = "QuickApp-z7"
version = "7.2"
authors = [{name = "Andrea Censi", email = "AndreaCensi@users.noreply.github.com"}]

[tool.poetry]
name = "QuickApp-z7"
version = "7.2"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    {from = "src", include = "quickapp"},
    {from = "src", include = "quickapp/app_utils"},
    {from = "src", include = "quickapp/rm"},
    {from = "src", include = "reprep_quickapp"},
    ]

[tool.poetry.dependencies]
ConfTools-z7 = "*"
compmake-z7 = "*"
numpy = "*"
reprep-z7 = "*"
zuper-commons-z7 = "*"
zuper-params-z7 = "*"
zuper-utils-asyncio-z7 = "*"
zuper-zapp-z7 = "*"

[tool.poetry.group.test.dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
